--- a/L201/index.html
+++ b/L201/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Lab 2/1</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <!-- page content -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Lab 2/1</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <!-- page content -->
+  <script>
+    var number = prompt('ჩაწერეთ რიცხვი', '');
+
+    if (number > 0) {
+      alert('1');
+    }
+
+    else if (number < 0) {
+      alert('-1');
+    }
+
+    else if (number == 0) {
+      alert('0');
+    }
+  </script>
+</body>
+
 </html>
