--- a/L202/index.html
+++ b/L202/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Lab 2/2</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <!-- page content -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Lab 2/2</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <!-- page content -->
+  <script>
+    for (var i = 2; i < 20; i++) {
+      if (i % 2 == 1) continue;
+      alert(i);
+    }
+
+  </script>
+</body>
+
 </html>
