--- a/L204/index.html
+++ b/L204/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Lab 2/2</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <!-- page content -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Lab 2/2</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <!-- page content -->
+  <script>
+    var passkey = 'qwerty';
+    while (true) {
+      var value = prompt('Enter Password')
+      if (value == passkey) alert('Howdy, user');
+      else if (value != passkey) continue;
+    }
+
+  </script>
+</body>
+
 </html>
